--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 server.port=8080
 
-spring.datasource.url= ${SPRING_DATASOURCE_URL}
-spring.datasource.username= ${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password= ${SPRING_DATASOURCE_PASSWORD}
+#spring.datasource.url= ${SPRING_DATASOURCE_URL}
+#spring.datasource.username= ${SPRING_DATASOURCE_USERNAME}
+#spring.datasource.password= ${SPRING_DATASOURCE_PASSWORD}
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/sales
+spring.datasource.username= postgres
+spring.datasource.password= postgres
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= ${SPRING_JPA_HIBERNATE_DDL_AUTO}
+#spring.jpa.hibernate.ddl-auto= ${SPRING_JPA_HIBERNATE_DDL_AUTO}
+spring.jpa.hibernate.ddl-auto= update
