--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,9 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 #spring.jpa.hibernate.ddl-auto= ${SPRING_JPA_HIBERNATE_DDL_AUTO}
 spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql: true
+
+springdoc.api-docs.path=/api-docs
+#http://localhost:8080/v3/api-docs
+#http://localhost:8080/api-docs.yaml
+#http://localhost:8080/swagger-ui/index.html
