--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.hibernate.ddl-auto= ${SPRING_JPA_HIBERNATE_DDL_AUTO}
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql: true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 springdoc.api-docs.path=/api-docs
 #http://localhost:8080/v3/api-docs
