--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,7 @@ springdoc.api-docs.path=/api-docs
 #http://localhost:8080/v3/api-docs
 #http://localhost:8080/api-docs.yaml
 #http://localhost:8080/swagger-ui/index.html
+
+spring.graphql.graphiql.enabled=true
+#spring.graphql.schema.locations=/graphql-schema
+
