--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.hibernate.ddl-auto= ${SPRING_JPA_HIBERNATE_DDL_AUTO}
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql: true
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 springdoc.api-docs.path=/api-docs
 #http://localhost:8080/v3/api-docs
@@ -29,5 +29,18 @@ springdoc.api-docs.path=/api-docs
 #http://localhost:8080/swagger-ui/index.html
 
 spring.graphql.graphiql.enabled=true
-#spring.graphql.schema.locations=/graphql-schema
+#http://localhost:8080/graphql
 
+logging.level.root=WARN
+logging.level.com.dm.springbootjpapostgresql=DEBUG
+logging.level.org.springframework=INFO
+logging.level.org.hibernate.validator=DEBUG
+
+# relative to the current directory
+logging.file.name=application.log
+
+# absolute path
+#logging.file.name=/var/log/application.log
+
+# write logs to /var/log/product-service/spring.log file
+#logging.file.path=/var/log/product-service
