--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,16 +4,6 @@ server.port=8080
 #spring.datasource.username= ${SPRING_DATASOURCE_USERNAME}
 #spring.datasource.password= ${SPRING_DATASOURCE_PASSWORD}
 
-#prabhu personal laptop
-spring.datasource.url= jdbc:postgresql://localhost:5432/sales
-spring.datasource.username= postgres
-spring.datasource.password= postgres
-
-#prabhu office laptop
-#spring.datasource.url= jdbc:postgresql://localhost:5432/prabhu
-#spring.datasource.username= prabhu
-#spring.datasource.password= Welc0me1$
-
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
@@ -44,3 +34,5 @@ logging.file.name=application.log
 
 # write logs to /var/log/product-service/spring.log file
 #logging.file.path=/var/log/product-service
+
+spring.profiles.active=localPersonal
