--- a/src/main/resources/application-localOffice.properties
+++ b/src/main/resources/application-localOffice.properties
@@ -2,3 +2,13 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/prabhu
 spring.datasource.username= prabhu
 spring.datasource.password= Welc0me1$
+
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=prabhu
+spring.data.mongodb.password=prabhu
+spring.data.mongodb.database=sampledb
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+
+redis.host=localhost
+redis.port=6379
