--- a/src/main/resources/application-localPersonal.properties
+++ b/src/main/resources/application-localPersonal.properties
@@ -9,3 +9,6 @@ spring.data.mongodb.password=prabhu
 spring.data.mongodb.database=acme
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
+
+redis.host=localhost
+redis.port=6379
