--- a/src/main/resources/application-localPersonal.properties
+++ b/src/main/resources/application-localPersonal.properties
@@ -3,10 +3,10 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/sales
 spring.datasource.username= postgres
 spring.datasource.password= postgres
 
-spring.data.mongodb.authentication-database=acme
+spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=prabhu
 spring.data.mongodb.password=prabhu
-spring.data.mongodb.database=acme
+spring.data.mongodb.database=sampledb
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 
