--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,14 @@
             <artifactId>jedis</artifactId>
 			<version>4.2.3</version>
         </dependency>		
+		
+		<!-- https://mvnrepository.com/artifact/io.hypersistence/hypersistence-utils-hibernate-63 -->
+		<dependency>
+			<groupId>io.hypersistence</groupId>
+			<artifactId>hypersistence-utils-hibernate-63</artifactId>
+			<version>3.7.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
