db connection examples

--- a/src/main/resources/application-localOffice.properties
+++ b/src/main/resources/application-localOffice.properties
@@ -1,7 +1,14 @@
 #prabhu office laptop
-spring.datasource.url= jdbc:postgresql://localhost:5432/prabhu
-spring.datasource.username= prabhu
-spring.datasource.password= Welc0me1$
+#spring.datasource.url= jdbc:postgresql://localhost:5432/prabhu
+#spring.datasource.username= prabhu
+#spring.datasource.password= Welc0me1$
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
+spring.datasource.username=spring
+spring.datasource.password=spring123
+
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.driver-class-name=oracle.jdbc.pool.OracleDataSource
 
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=prabhu
