--- a/src/main/resources/application-localOffice.properties
+++ b/src/main/resources/application-localOffice.properties
@@ -19,3 +19,8 @@ spring.data.mongodb.host=localhost
 
 redis.host=localhost
 redis.port=6379
+
+#attachment.location=src/main/resources/attachments
+attachment.location=D:\\attachments
+file.outputLocation=D:\\attachments\\output
+file.inputLocation=D:\\attachments\\input
