--- a/src/main/resources/application-localPersonal.properties
+++ b/src/main/resources/application-localPersonal.properties
@@ -12,3 +12,7 @@ spring.data.mongodb.host=localhost
 
 redis.host=localhost
 redis.port=6379
+
+attachment.location=F:\\attachments
+file.outputLocation=F:\\attachments\\output
+file.inputLocation=F:\\attachments\\input
