--- a/src/main/resources/application-localPersonal.properties
+++ b/src/main/resources/application-localPersonal.properties
@@ -1,7 +1,11 @@
 #prabhu personal laptop
-spring.datasource.url= jdbc:postgresql://localhost:5432/sales
-spring.datasource.username= postgres
-spring.datasource.password= postgres
+#spring.datasource.url= jdbc:postgresql://localhost:5432/sales
+#spring.datasource.username= postgres
+#spring.datasource.password= postgres
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
+spring.datasource.username=spring
+spring.datasource.password=spring123
 
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=prabhu
