--- a/src/main/resources/application-localOffice.properties
+++ b/src/main/resources/application-localOffice.properties
@@ -3,7 +3,7 @@
 #spring.datasource.username= prabhu
 #spring.datasource.password= Welc0me1$
 
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/ORCL
 spring.datasource.username=spring
 spring.datasource.password=spring123
 
