Maven to Gradle changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,26 @@
 HELP.md
+
+### Maven ###
 target/
+mvnw.cmd
+mvnw
+.mvn/wrapper/maven-wrapper.properties
+#.mvn/wrapper/maven-wrapper.jar
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-src/main/resources/attachments/
 
-### STS ###
+### Gradle ###
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!gradle/wrapper/gradle-wrapper.properties
+!gradlew
+!gradlew.bat
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### Eclipse STS ###
 .apt_generated
 .classpath
 .factorypath
@@ -14,11 +29,19 @@ src/main/resources/attachments/
 .springBeans
 .sts4-cache
 
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
+
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
 
 ### NetBeans ###
 /nbproject/private/
@@ -26,6 +49,7 @@ src/main/resources/attachments/
 /dist/
 /nbdist/
 /.nb-gradle/
+
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -33,9 +57,33 @@ build/
 ### VS Code ###
 .vscode/
 
+### MapStruct/Lombok ###
+/target/generated-sources/
+
+
 ###log###
 *.log
 *.gz
 
 #sql
 *.~sql
+
+#attachments
+src/main/resources/attachments/
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+*.tmp
+*.swp
+*.bak
+
+# JaCoCo coverage reports
+jacoco.exec
+/target/site/jacoco/
+
