--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,4 +34,9 @@ logging.file.name=application.log
 # write logs to /var/log/product-service/spring.log file
 #logging.file.path=/var/log/product-service
 
+#spring.security.user.name=testuser
+#spring.security.user.password=password
+
+
 spring.profiles.active=localPersonal
+
