--- a/src/main/resources/application-localPersonal.properties
+++ b/src/main/resources/application-localPersonal.properties
@@ -20,3 +20,10 @@ redis.port=6379
 attachment.location=F:\\attachments
 file.outputLocation=F:\\attachments\\output
 file.inputLocation=F:\\attachments\\input
+
+#External LDAP directory config:
+spring.ldap.urls=ldap://localhost:389
+spring.ldap.base=ou=People,dc=AadhaviTheera,dc=local
+spring.ldap.username=cn=admin,dc=AadhaviTheera,dc=local
+spring.ldap.password=adminpassword
+#logging.level.org.springframework.ldap=DEBUG
