--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    
+    implementation 'org.springframework.boot:spring-boot-starter-data-ldap'
+    implementation 'org.springframework.ldap:spring-ldap-core'
 
     // Dependencies with explicit versions (or not managed by Spring Boot BOM)
     implementation 'com.graphql-java:graphql-java-tools:5.2.4'
@@ -52,6 +53,8 @@ dependencies {
     implementation 'com.google.guava:guava:33.0.0-jre'
     implementation 'org.json:json:20240303'
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+    implementation 'com.unboundid:unboundid-ldapsdk:6.0.6'
+
 
     // Runtime dependencies
     runtimeOnly 'org.postgresql:postgresql' // Version managed by Spring Boot parent
