--- a/pom.xml
+++ b/pom.xml
@@ -104,12 +104,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>3.0.0</version>
-        </dependency>		
+        </dependency>	
 
         <dependency>
             <groupId>redis.clients</groupId>
@@ -220,6 +215,23 @@
 		<version>0.12.6</version>
 		<scope>runtime</scope>
 	</dependency>
+	<dependency>
+
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-data-ldap</artifactId>
+	</dependency>
+
+	<dependency>
+		<groupId>org.springframework.ldap</groupId>
+		<artifactId>spring-ldap-core</artifactId>
+		<version>3.3.1</version>
+	</dependency>
+
+	<dependency>
+	<groupId>com.unboundid</groupId>
+	<artifactId>unboundid-ldapsdk</artifactId>
+	</dependency>
+
 	</dependencies>
 
 	<build>
