--- a/src/main/resources/application-localPersonal.properties
+++ b/src/main/resources/application-localPersonal.properties
@@ -3,7 +3,7 @@
 #spring.datasource.username= postgres
 #spring.datasource.password= postgres
 
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/ORCL19C
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/FREEPDB1
 spring.datasource.username=spring
 spring.datasource.password=spring123
 
