--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,11 @@
 			<artifactId>ojdbc10</artifactId>
 			<version>19.22.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.oracle.database.security</groupId>
+			<artifactId>oraclepki</artifactId>
+			<version>23.26.0.0.0</version>
+		</dependency>		
 		<!-- https://mvnrepository.com/artifact/it.unimi.dsi/dsiutils -->
 		<dependency>
 			<groupId>it.unimi.dsi</groupId>
