--- a/pom.xml
+++ b/pom.xml
@@ -252,13 +252,30 @@
 				<configuration>
 					<annotationProcessorPaths>
 						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.30</version>
+						</path>					
+						<path>
 							<groupId>org.mapstruct</groupId>
 							<artifactId>mapstruct-processor</artifactId>
 							<version>1.5.5.Final</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
-			</plugin>			
+			</plugin>	
+			<plugin>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+			<version>3.2.5</version>
+			<executions>
+				<execution>
+				<goals>
+					<goal>repackage</goal>
+				</goals>
+				</execution>
+			</executions>
+			</plugin>					
 		</plugins>
 	</build>
 
