JPA methods tutorial changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,18 +7,15 @@ server.port=7080
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 #spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.OracleDialect
-
+spring.jpa.properties.hibernate.format_sql=false
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 # Hibernate ddl auto (create, create-drop, validate, update)
 #spring.jpa.hibernate.ddl-auto= ${SPRING_JPA_HIBERNATE_DDL_AUTO}
-spring.jpa.hibernate.ddl-auto= update
-#spring.jpa.hibernate.ddl-auto= none
+#spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= none
+spring.jpa.show-sql = true
+#spring.jpa.show-sql = false
 
-#spring.jpa.show-sql = true
-spring.jpa.show-sql = false
-
-spring.jpa.properties.hibernate.format_sql=false
-
-#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 springdoc.api-docs.path=/api-docs
 #http://localhost:7080/swagger-ui/index.html
@@ -29,6 +26,9 @@ spring.graphql.graphiql.enabled=true
 logging.level.root=WARN
 logging.level.com.dm.springbootjpapostgresql=DEBUG
 logging.level.org.springframework=INFO
+#logging.level.org.springframework.ldap=DEBUG
+logging.level.org.springframework.web.servlet.mvc.method.annotation=DEBUG
+#logging.level.org.springframework.data.repository.config=DEBUG
 logging.level.org.hibernate.validator=DEBUG
 
 # relative to the current directory
@@ -43,6 +43,4 @@ logging.file.name=application.log
 #spring.security.user.name=testuser
 #spring.security.user.password=password
 
-
 spring.profiles.active=localPersonal
-
