Added MapStruct for post

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.properties.hibernate.format_sql=false
 #spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 # Hibernate ddl auto (create, create-drop, validate, update)
 #spring.jpa.hibernate.ddl-auto= ${SPRING_JPA_HIBERNATE_DDL_AUTO}
-#spring.jpa.hibernate.ddl-auto= update
-spring.jpa.hibernate.ddl-auto= none
+spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.hibernate.ddl-auto= none
 spring.jpa.show-sql = true
 #spring.jpa.show-sql = false
 
