--- a/src/main/resources/application-localPersonal.properties
+++ b/src/main/resources/application-localPersonal.properties
@@ -26,3 +26,8 @@ spring.ldap.urls=ldap://localhost:389
 spring.ldap.base=ou=People,dc=AadhaviTheera,dc=local
 spring.ldap.username=cn=admin,dc=AadhaviTheera,dc=local
 spring.ldap.password=adminpassword
+
+# Apache Active MQ
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
