--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-activemq</artifactId>
+		</dependency>		
         <!-- spring security test -->
         <dependency>
             <groupId>org.springframework.security</groupId>
