--- a/src/main/resources/application-localPersonal.properties
+++ b/src/main/resources/application-localPersonal.properties
@@ -31,3 +31,30 @@ spring.ldap.password=adminpassword
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
+
+#Kafka
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.add.type.headers=false
+
+spring.kafka.listener.ack-mode=MANUAL
+spring.kafka.listener.missing-topics-fatal=false
+
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+#spring.kafka.consumer.group-id=user-group
+#spring.kafka.consumer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.consumer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+#spring.kafka.consumer.group-id=invoicing
+#spring.kafka.consumer.value-deserializer=com.ewolff.microservice.invoicing.events.InvoiceDeserializer
+
+#spring.kafka.consumer.group-id=shipping
+#spring.kafka.consumer.value-deserializer=com.dm.springbootjpapostgresql.dto.deserializer.ShipmentDeserializer
+
+
