--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=7080
+spring.application.name=spring-boot-jpa-postgresql
+server.error.whitelabel.enabled=false
 
 #spring.datasource.url= ${SPRING_DATASOURCE_URL}
 #spring.datasource.username= ${SPRING_DATASOURCE_USERNAME}
@@ -16,13 +18,19 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql = true
 #spring.jpa.show-sql = false
 
+# Expose all actuator endpoints (health, info, metrics, etc.)
+management.endpoints.web.exposure.include=*
 
+# Swagger
+springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/index.html
 #http://localhost:7080/swagger-ui/index.html
+springdoc.show-actuator = false
 
 spring.graphql.graphiql.enabled=true
 #http://localhost:7080/graphql
-
+  
 logging.level.root=WARN
 logging.level.com.dm.springbootjpapostgresql=DEBUG
 logging.level.org.springframework=INFO
