--- a/src/main/resources/application-localPersonal.properties
+++ b/src/main/resources/application-localPersonal.properties
@@ -28,11 +28,13 @@ spring.ldap.username=cn=admin,dc=AadhaviTheera,dc=local
 spring.ldap.password=adminpassword
 
 # Apache Active MQ
+#spring.jms.listener.auto-startup=false
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 
 #Kafka
+#spring.kafka.listener.auto-startup=false
 spring.kafka.producer.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 #spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
